[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/ai/_BaseAI.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ai/gunner/Follow.gd" type="Script" id=2]
[ext_resource path="res://scenes/ai/gunner/GunnerAI.gd" type="Script" id=3]
[ext_resource path="res://scenes/ai/gunner/Flee.gd" type="Script" id=4]
[ext_resource path="res://scenes/ai/gunner/Shoot.gd" type="Script" id=5]
[ext_resource path="res://scenes/ai/gunner/Idle.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 500.0

[node name="AI" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="FSM" parent="." index="0"]
initial_state = "Idle"

[node name="Idle" type="Node" parent="FSM" index="0"]
script = ExtResource( 6 )
state_name = "Idle"

[node name="Follow" type="Node" parent="FSM" index="1"]
script = ExtResource( 2 )
state_name = "Follow"

[node name="Shoot" type="Node" parent="FSM" index="2"]
script = ExtResource( 5 )
state_name = "Shoot"

[node name="Flee" type="Node" parent="FSM" index="3"]
script = ExtResource( 4 )
state_name = "Flee"

[node name="WeaponRange" type="Area2D" parent="." index="1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponRange" index="0"]
shape = SubResource( 1 )

[node name="VelocityRay" parent="." index="4"]
enabled = true
[connection signal="body_entered" from="WeaponRange" to="." method="_on_WeaponRange_body_entered"]
[connection signal="body_exited" from="WeaponRange" to="." method="_on_WeaponRange_body_exited"]
